# app/controllers/klass_controller.rb
@@ -1,0 +1,6 @@
+class KlassController < ApplicationController
+  def index
+    @klasses = Klass.where(school_id: params[:school_id])
+    render json: { data: @klasses }
+  end
+end
