# config/routes.rb
@@ -15,4 +15,6 @@ Rails.application.routes.draw do
       resources :students, only:[:index]
     end
   end
+
+  resources :students, only:[:create, :destroy]
 end
